src/app/app.component.scss
app-root {
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

router-outlet {
  flex-grow: 1;
}

app-footer {
  margin-top: auto;
  padding: 20px;
  background-color: #333;
  color: #fff;
  text-align: center;
}

.back-to-top {
  display: block;
}

@media (max-width: 768px) {
  .back-to-top {
    display: none;
  }
}

